--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "bulma": "^0.8.0",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.28",
     "sortablejs": "^1.10.2"
   },
   "browserslist": "last 2 years, >2%"
